Adds disclaimer, updates logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="logobackground">
                     <div id="logoshape">
                         <div id="logotext">
-                            <h1>Edge of Tomorrow DVD Rentals</h1>
+                            <h1>Edge of Tomorrow<br>DVD Rentals</h1>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                     </ul>
             </div>
             <p class="copyrightnotice">
-                All content &copy; 2017 Jennifer Doherty except as noted.
+                All content &copy; 2017 Jennifer Doherty except as noted. DISCLAIMER: This website is for educational purposes only. All movie content belongs to the copyright owners.
             </p>
         </footer>
 
