Adds placeholder pages, first pass join form

--- a/techzone.html
+++ b/techzone.html
@@ -45,9 +45,9 @@
         </aside>
 
         <main>
-            <h1>Edge of Tomorrow DVD Rentals</h1>
+            <h1>TechZone</h1>
                 <p>
-                    Welcome to Edge of Tomorrow DVD Rentals - bringing you the latest DVD rentals! Our website is currently under construction, please check back later for more!
+                    Skeleton TechZone page
                 </p>
         </main>
 
