--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Edge of Tomorrow DVD Rentals - Home</title>
+    <title>Edge of Tomorrow DVD Rentals - Contact</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/palette.css">
@@ -45,9 +45,9 @@
         </aside>
 
         <main>
-            <h1>Edge of Tomorrow DVD Rentals</h1>
+            <h1>Contact Us</h1>
                 <p>
-                    Welcome to Edge of Tomorrow DVD Rentals - bringing you the latest DVD rentals! Our website is currently under construction, please check back later for more!
+                    Skeleton contact page
                 </p>
         </main>
 
