--- a/moviezone.html
+++ b/moviezone.html
@@ -45,9 +45,9 @@
         </aside>
 
         <main>
-            <h1>Edge of Tomorrow DVD Rentals</h1>
+            <h1>MovieZone</h1>
                 <p>
-                    Welcome to Edge of Tomorrow DVD Rentals - bringing you the latest DVD rentals! Our website is currently under construction, please check back later for more!
+                    Skeleton MovieZone page
                 </p>
         </main>
 
