--- a/join.html
+++ b/join.html
@@ -71,59 +71,99 @@
                     Welcome to Edge of Tomorrow DVD Rentals and thanks for your interest in our e-shop! To sign up, we need a few details from you.
                 </p>
                 <fieldset id="fieldsetbasicinfo">
-                    <label for="lastname">Last Name:</label>
-                    <input id="lastname" name="lastname" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="lastname" aria-required="true" aria-describedby="name-format" maxlength="50">
-                    <label for="othernames">Other Names:</label>
-                    <input id="othernames" name="othernames" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="othernames" aria-required="true" aria-describedby="name-format" maxlength="60">
-                    <label for="occupation">Occupation:</label>
-                    <select name="occupation" id="occupation" required aria-required="true" title="occupation">
-                        <option value="other">Arts and Entertainment</option>
-                        <option value="other">Business</option>
-                        <option value="other">Industrial and Manufacturing</option>
-                        <option value="other">Law Enforcement and Armed Forces</option>
-                        <option value="other">Science and Technology</option>
-                        <option value="other">Healthcare and Medicine</option>
-                        <option value="other">No Occupation</option>
-                        <option value="other">Student</option>
-                        <option value="other">Retired</option>
-                        <option value="other">Other</option>
-                    </select>
+                    <div>
+                        <label for="lastname">Last Name:</label>
+                        <input id="lastname" name="lastname" value="" required pattern="[A-Za-z-']+\s[A-Za-z-']" title="lastname" aria-required="true" aria-describedby="lastname-format" maxlength="50">
+                        <span id="lastname-format" class="help">Required field. Letters, spaces, - or ' only. Max 50 characters.</span>
+                    </div>
+                    <div>
+                        <label for="othernames">Other Names:</label>
+                        <input id="othernames" name="othernames" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="othernames" aria-required="true" aria-describedby="othernames-format" maxlength="60">
+                        <span id="othernames-format" class="help">Required field. Letters, spaces, - or ' only. Max 60 characters.</span>
+                    </div>
+                    <div>
+                        <label for="occupation">Occupation:</label>
+                        <select name="occupation" id="occupation" required aria-required="true" title="occupation" aria-describedby="occupation-format">
+                            <option value="other">Arts and Entertainment</option>
+                            <option value="other">Business</option>
+                            <option value="other">Industrial and Manufacturing</option>
+                            <option value="other">Law Enforcement and Armed Forces</option>
+                            <option value="other">Science and Technology</option>
+                            <option value="other">Healthcare and Medicine</option>
+                            <option value="other">No Occupation</option>
+                            <option value="other">Student</option>
+                            <option value="other">Retired</option>
+                            <option value="other">Other</option>
+                        </select>
+                        <span id="occupation-format" class="help">Required field.</span>
+                    </div>
                 </fieldset>
                 <fieldset id="fieldsetcommunicationmethod">
-                    Please choose your preferred communication method and provide us with your contact details.<br>
-                    <input type="radio" name="communicationmethod" id="communicationemail" value="email" checked> Email<br>
-                    <input type="radio" name="communicationmethod" id="communicationphone" value="phone"> Daytime phone<br>
-                    <input type="radio" name="communicationmedhod" id="communicationmobile" value="mobile"> Mobile phone<br>
+                    <div>
+                        Please choose your preferred communication method and provide us with your contact details.<br>
+                        <input type="radio" name="communicationmethod" id="communicationemail" value="email" checked> Email<br>
+                        <input type="radio" name="communicationmethod" id="communicationphone" value="phone"> Daytime phone<br>
+                        <input type="radio" name="communicationmethod" id="communicationmobile" value="mobile"> Mobile phone<br>
+                    </div>
                 </fieldset>
                 <fieldset id="fieldsetcontactinfo">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" value="" required aria-required="true">
-                    <label for="phone">Daytime phone:</label>
-                    <input type="tel" id="phone" name="phone" value="" required aria-required="true">
-                    <label for="mobile">Mobile phone:</label>
-                    <input type="tel" id="mobile" name="mobile" value="" required aria-required="true">
+                    <div>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" value="" required aria-required="true" aria-describedby="email-format">
+                        <span id="email-format" class="help">Required if communication method is email. Valid email address required. Max 50 characters.</span>
+                    </div>
+                    <div>
+                        <label for="phone">Daytime phone:</label>
+                        <input type="tel" id="phone" name="phone" value="" required aria-required="true" aria-describedby="phone-format">
+                        <span id="phone-format" class="help">Required if communication method is daytime phone. Format: (0[2,3,6,7,8,or 9]) XXXXXXXX where X is a digit.</span>
+                    </div>
+                    <div>
+                        <label for="mobile">Mobile phone:</label>
+                        <input type="tel" id="mobile" name="mobile" value="" required aria-required="true" aria-describedby="mobile-format">
+                        <span id="mobile-format" class="help">Required if communication method is mobile phone. Format: 0[4 or 5]XX XXX XXX where X is a digit.</span>
+                    </div>
                 </fieldset>
                 <fieldset id="fieldsetmagazine">
-                    Would you like to receive our monthly magazine?<br>
-                    <input type="checkbox" name="magazinesubscription" id="magazinesubscription" value="yes" checked> Yes, please mail me the monthly magazine<br>
-                    <label for="street">Street address:</label>
-                    <input id="street" name="street" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="street" aria-required="true" aria-describedby="street-format" maxlength="50">
-                    <label for="state">Suburb and state:</label>
-                    <input id="state" name="state" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="state" aria-required="true" aria-describedby="state-format" maxlength="50">
-                    <label for="postcode">Postcode:</label>
-                    <input type="number" id="postcode" name="postcode" value="" required title="state" aria-required="true" aria-describedby="state-format" maxlength="4">
+                    <div>
+                        Would you like to receive our monthly magazine?<br>
+                        <input type="checkbox" name="magazinesubscription" id="magazinesubscription" value="yes" checked style="margin-left:0"> Yes, please mail me the monthly magazine<br>
+                     </div>
+                    <div>
+                        <label for="street">Street address:</label>
+                        <input id="street" name="street" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="street" aria-required="true" aria-describedby="street-format" maxlength="50">
+                        <span id="street-format" class="help">Required for magazine delivery. Street number and name. Max 50 characters.</span>
+                    </div>
+                    <div>
+                        <label for="state">Suburb and state:</label>
+                        <input id="state" name="state" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="state" aria-required="true" aria-describedby="state-format" maxlength="50">
+                        <span id="state-format" class="help">Required for magazine delivery. Suburb and State. Max 50 characters.</span>
+                    </div>
+                    <div>
+                        <label for="postcode">Postcode:</label>
+                        <input type="number" id="postcode" name="postcode" value="" required title="state" aria-required="true" aria-describedby="postcode-format" maxlength="4">
+                        <span id="postcode-format" class="help">Required for magazine delivery. Postcode. 4 digits only.</span>
+                    </div>
                 </fieldset>
                 <fieldset id="fieldsetlogindetails">
                     Please choose a username and password.<br>
-                    <label for="username">Username:</label>
-                    <input id="username" name="username" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="username" aria-required="true" aria-describedby="username-format" maxlength="10" minlength="6">
-                    <label for="password1">Password:</label>
-                    <input type="password" id="password1" name="password1" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="password1" aria-required="true" aria-describedby="password-format" minlength="10">
-                    <label for="password2">Re-enter password:</label>
-                    <input type="password" id="password2" name="password2" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="password2" aria-required="true" aria-describedby="password-format" minlength="10">
+                    <div>
+                        <label for="username">Username:</label>
+                        <input id="username" name="username" value="" required pattern="[A-Za-z0-9]" title="username" aria-required="true" aria-describedby="username-format" maxlength="10" minlength="6">
+                        <span id="username-format" class="help">Required field. 6-10 characters only, no spaces.</span>
+                    </div>
+                    <div>
+                        <label for="password1">Password:</label>
+                        <input type="password" id="password1" name="password1" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="password1" aria-required="true" aria-describedby="password1-format" maxlength="10">
+                        <span id="password1-format" class="help">Required field. Must include 1 uppercase, 1 lowercase, 1 number, 1 symbol, no spaces. Max 10 characters.</span>
+                    </div>
+                     <div>
+                        <label for="password2">Re-enter password:</label>
+                        <input type="password" id="password2" name="password2" value="" required pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="password2" aria-required="true" aria-describedby="password2-format" maxlength="10">
+                         <span id="password2-format" class="help">Required field. Must match first password above.</span>
+                     </div>
                 </fieldset>
-                <input type="submit" name="submit" id="submit" value="Submit">
-                <input type="reset" name="reset" id="reset" value="Reset">
+                <input type="submit" name="submit" id="submit" value="Submit" style="margin-left: 180px">
+                <input type="reset" name="reset" id="reset" value="Reset" style="margin-left: 10px">
             </form>
         </main>
 
