--- a/moviezone.html
+++ b/moviezone.html
@@ -47,7 +47,7 @@
         <main>
             <h1>MovieZone</h1>
                 <p>
-                    Skeleton MovieZone page
+                    This page is under construction! Please come back later!
                 </p>
         </main>
 
