--- a/join.html
+++ b/join.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/palette.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto">
     <meta name="description" content="Edge of Tomorrow DVD Rentals.">
+    <script language="JavaScript" src="js/validation.js" type="text/javascript" ></script>
 </head>
 
 <body>
@@ -178,5 +179,5 @@
     var today = (new Date()).toISOString().substring(0, 10);
     document.getElementById("joindate").value = today;
 </script>
-<script src="js/joinvalidation.js"></script>
+<script src="js/validation.js"></script>
 </html>
